# routes/index.js
@@ -3,5 +3,6 @@ const { root } = require('../controllers/basicController');
 
 router.get('/', root);
 router.use('/games', require('./games'));
+router.use('/users', require('./users'));
 
 module.exports = router;
